--- a/package.json
+++ b/package.json
@@ -14,13 +14,26 @@
       "@babel/preset-react"
     ],
     "plugins": [
+      "@babel/plugin-proposal-class-properties",
       "syntax-dynamic-import"
     ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
+  },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "copy-webpack-plugin": "^6.3.2",
     "prop-types": "^15.7.2",
@@ -29,18 +42,6 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
-  },
-  "devDependencies": {
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "@babel/core": "^7.12.7",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/preset-react": "^7.12.7",
-    "babel-loader": "^8.2.1",
-    "css-loader": "^5.0.1",
-    "html-webpack-plugin": "^4.5.0",
-    "style-loader": "^2.0.0"
   }
 }
